...
    <string name="savedInterval_text">Saved new interval</string>
    <string name="deleteAccount_buttonText">Delete Account</string>
    <string name="position_headerText">Position</string>
    <string name="visibility_headerText">Visibility</string>
    <string name="account_headerText">Account</string>
    <string name="interval_hintText">…seconds</string>
    <string name="newPassword_hintText">new password</string>
    <string name="changePassword_text">Change Password</string>
    <string name="settings_label">Settings</string>
    <string name="changeDescription_hintText">description…</string>
    <string name="description_text">Description</string>
    <string name="cancelSetting_text">Cancel</string>
    <string name="saveSetting_text">Save</string>
    <string name="descriptionSetting_headerText">Description</string>
    <string name="radius_text">Radius</string>
    <string name="radius_hintText">km</string>
    <string name="deleteAccount_headerText">Delete Account!</string>
    <string name="deleteAccount_messageText">Do you really want to delete this account?</string>
    <string name="yes_dialogText">Yes</string>
    <string name="no_dialogText">No</string>
    <string name="saveChanges_headerText">Save Changes</string>
    <string name="saveChanges_messageText">Do you want to save all changes?</string>
    <string name="currentDescription_headerText">Current Description</string>
    <string name="close_dialogText">Close</string>
    <string name="saved_messageText">Saved!</string>
...
